--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -4,7 +4,9 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  padding: 2rem;
   gap: 10rem;
+  background-color: rgba(246, 246, 246, 1);
 
   &__title {
     background-color: rgba(0, 0, 0, 0.1);
@@ -64,4 +66,36 @@
   background-color: rgba(75, 216, 26, 1);
   padding: 0.5rem;
   margin: 0.22rem;
+}
+
+@media (max-width: 600px) {
+  .about {
+    justify-content: center;
+    align-items: center;
+    img {
+      width: 75%;
+    }
+    &__container {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__content {
+      width: 100%;
+    }
+
+    &__me {
+      font-size: 16px;
+    }
+
+    &__text {
+      font-size: 12px;
+      width: 100%;
+      line-height: 2rem;
+    }
+
+    &__info {
+      font-size: 12px;
+    }
+  }
 }
