--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,6 +1,6 @@
 .skills {
   min-height: 100vh;
-  background-image: url("../../assets/skills-background.svg"); /* Asegúrate de que la ruta sea correcta */
+  background-image: url("../../assets/skills-background.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
